# module_2-HW13-part_1

./: docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
hw11/: schemas.py
hw11/conf/: config.py
hw11/database/: db.py  models.py
hw11/repository/: contacts.py  users.py
hw11/routes/: auth.py  contacts.py  users.py
hw11/services/: auth.py  email.py
migrations/: env.py
migrations/versions/: 6a4794fe07e7_init.py  9e8bcad4e989_init.py  ab83cb02e7de_init.py  e4838986615e_init.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
